--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel=”stylesheet” href=”style.css”>
-</head>
+</header>
 <body>
-  <h1>Aqui vai ser uma imagem</h1>  
+  <h1>Aqui vai ser uma imagem</h1> 
+
 </body>
 </html>
