--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel=”stylesheet” href=”style.css”>
-</header>
-<body>
-  <h1>Aqui vai ser uma imagem</h1> 
+    <link rel="stylesheet" href="style.css">
+<header class="cabeçalho"> 
 
-</body>
+<img class="imagemcabeçalho" src="/tmp/guest-bp57yb/Downloads/Trabalho-2-G-main/img/alurastart logo 1.png" alt="imagem alura start">
+
+  
+  <ul class="lista-cabeçalho">
+      <li>Estudante: Izaias Garcia Sobrinho</li>
+       <li>Escola: Colégio Estadual Antônio Lacerda Braga</li>
+
+  </ul>
+
+</header>
 </html>
