--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="style.css">
 <header class="cabeçalho"> 
 
-<img class="imagemcabeçalho" src="/tmp/guest-bp57yb/Downloads/Trabalho-2-G-main/img/alurastart logo 1.png" alt="imagem alura start">
+<img class="imagemcabeçalho" src="./alurastart logo 1.png" alt="imagem alura start">
 
   
   <ul class="lista-cabeçalho">
-      <li>Estudante: Izaias Garcia Sobrinho</li>
-       <li>Escola: Colégio Estadual Antônio Lacerda Braga</li>
+      <li class="lista-cabeçalho">Estudante: Izaias Garcia Sobrinho</li>
+       <li class="lista-cabeçalho">Escola: Colégio Estadual Antônio Lacerda Braga</li>
 
   </ul>
 
